deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-deployment
spec:
  selector:
    matchLabels:
      run: ruby-deployment
  replicas: 1
  template:
    metadata:
      labels:
        run: ruby-deployment
    spec:
      containers:
      - name: ruby-container
        image: ayush0404/ruby:v2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 500m
