service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-svc-2
  labels:
    run: ruby-svc-2
spec:
  selector:
    run: ruby-deployment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
