service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruby-svc
  labels:
    run: ruby-svc
spec:
  selector:
    run: ruby-deployment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
